--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "2.1.0",
   "main": "index.js",
   "description": "Databases labs template",
-  "repository": "https://github.com/kujo205/db_labs",
-  "author": "Ivan Kuts <kuc8301@gmail.com>",
+  "repository": "https://github.com/magicvegetable/db_labs",
+  "author": "Maksym Dikhtiar <maaagicvegetable@gmail.com>",
   "license": "ECL 2.0",
   "scripts": {
     "docs:dev": "npx vuepress dev docs",
